# rukki

./: Cargo.toml  README.licenses  README.md
.github/workflows/: CI.yml  clippy.yml  fmt.yml
src/: graph.rs  graph_algos.rs  lib.rs  main.rs  pseudo_hap.rs  trio.rs  trio_walk.rs
src/graph_algos/: dfs.rs  scc.rs  superbubble.rs
tests/: graph_test.rs  scc_test.rs  superbubble_test.rs  trio_test.rs  trio_walk_test.rs
tests/test_graphs/: path_closing.ann.csv  path_closing.gfa  scc_tangle.ann.csv  scc_tangle.gfa  sparse_markers.ann.csv  sparse_markers.gfa  test1.ann  test1.ann.csv  test1.no_homozygous.csv  test1.processed.gfa  test2.ann.csv  test2.gfa  test3.ann.csv  test3.gfa  test_assign.ann.csv  test_assign.gfa  test_gap.ann.csv  test_gap.gfa
