[package]
name = "rukki"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "3.1.*", features = ["derive"] }
clap_lex = "=0.2.2"
os_str_bytes = "6.1.*"
